--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<main-nav>
-  <p>home-page works!</p>
-</main-nav>
+<!--
+    Pitäisi toimia vain Topnavina, atm vie kaiken tilan
+    <main-nav></main-nav>
+-->
+
+<app-home></app-home> 
 
 <router-outlet></router-outlet>
