Bottom nav ja sivujen routtaaminen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <main-nav>
-  <p>home-page works!</p>
+  <router-outlet></router-outlet>
+  <app-bottom-nav></app-bottom-nav>
 </main-nav>
 
-<router-outlet></router-outlet>
+
