--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -10,10 +10,10 @@
     <mat-toolbar color="primary">Menu</mat-toolbar>
     <mat-nav-list>
       <!-- <a mat-list-item href="#" routerLink="">Link 1</a> -->
-      <a mat-list-item href="#">Tavoite</a>
-      <a mat-list-item href="#">Tips & Tricks</a>
-      <a mat-list-item href="#">Harrastukset</a>
-      <a mat-list-item href="#">Asetukset</a>
+      <a mat-list-item >Tavoite</a>
+      <a mat-list-item >Tips & Tricks</a>
+      <a mat-list-item >Harrastukset</a>
+      <a mat-list-item >Asetukset</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
