--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,58 @@
-<mat-card class="home-Card">
+
+<div class="home-screen">
+    <div class="home-screen-scores">
+        <div class="home-screen-text-wrapper">
+            <div class="mat-display-1">Hei User</div>
+        </div>
+    </div>
+
+    <div class="home-screen-spinners">
+        <div class="home-screen-spinners-wrapper">
+            <mat-progress-spinner id="#spinneri1"
+            [value]="spinner1" 
+            diameter="200" 
+            strokeWidth="12"
+            style="position:absolute; top:10px;"
+            >
+            </mat-progress-spinner>
+            <mat-progress-spinner id="#spinneri2"
+            [value]="spinner2" 
+            diameter="170" 
+            strokeWidth="12"
+            style="position:absolute; top:25px;"
+            ></mat-progress-spinner>
+            <mat-progress-spinner id="#spinneri3"
+            [value]="spinner3" 
+            diameter="140" 
+            strokeWidth="12"
+            style="position:absolute; top:40px;"
+            ></mat-progress-spinner>  
+        </div>
+    </div>
+    <div class="spinner-scores-wrapper">
+        <div class="mat-h1">Liikunta
+            <div class="liikunta-scores">
+                <span [innerHTML]='liikuntaScores'></span>
+            </div>
+        </div>
+        <div class="mat-h1">Ruokailu
+            <div class="ruokailu-scores">78/100</div>
+        </div>
+        <div class="mat-h1">Nukkuminen
+            <div class="nukkuminen-scores">43/100</div>
+        </div>
+    </div>
+
+</div>
+
+
+
+
+<!--
+
+    Vanha tapa, tein mat-cardilla <-- säästin jos todetaankin paremmaksi
+
+    <mat-card class="home-Card">
     <mat-card-header>
         <mat-card-title>Hei User</mat-card-title>
     </mat-card-header>
@@ -30,10 +84,6 @@
     <div class="mat-title">Nukkuminen:</div>
 
 </mat-card>
-
-
-
-<!--
 
     Voi ehkä käyttää jossain?
 
