--- a/src/app/pages/stats/stats.component.html
+++ b/src/app/pages/stats/stats.component.html
@@ -1,6 +1,11 @@
 <h1> Tämä on Stat Page</h1>
 <button (click)="countSteps()">Laske Askeleet</button>
 <button (click)="stop()">Lopeta</button>
+<button (click)="getSteppes()">Hae Healthkit askeleet</button>
 <div>
-    {{StepcounterService.steps | json}}
+    Askeleet : {{StepcounterService.steps.numberOfSteps}}
+    Kaikki tieto: {{StepcounterService.steps | json}}
+</div>
+<div>
+   Healthkit askeleet: {{ HealthkitService.object | json}}
 </div>
