--- a/src/app/bottom-nav/bottom-nav.component.scss
+++ b/src/app/bottom-nav/bottom-nav.component.scss
@@ -1,7 +1,11 @@
 .BottomNav{  
   position: fixed;
+  height: auto;
+  height: 10%;
   bottom: 0; 
+  /*
   z-index: 1000;
+  */
   display: flex;
   justify-content: space-between;
   padding: 2em;
