--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,127 +1,44 @@
-// all here old
-.homePage#wrappingDiv {
-    // todo lisää @mediat
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 1rem;
-    text-align: center;
-    max-width: 42%;
-    border-radius: 12px;
-    height: 60px;
-
-    .terppiMid  {
-        width: 100%;
-        height: 100%;
-        display: table;
-        text-align: center;
-        margin-bottom: 1rem;
-    };
-    h1  {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        font-weight: 370;
-        font-size: xx-large;
-        margin-bottom: 0;
-        padding-top: 10px;
-    };
-
-};
-
 .home-screen {
-    //width: 100 %;
-    //margin-left: auto;
-    //margin-right: auto;
-    width: 100%;
-    position: fixed; 
-    z-index: 1;
+    z-index: 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    margin: auto;
-    height: 87%;
-    overflow: scroll; overflow-x:hidden;
-    //justify-content: space-between;
-    background-color: rgb(31, 31, 31)
-    //border-radius: 12px;
+    width: 100%;
+    height: 91%;
+    background-color: rgb(31, 31, 31);
+    overflow: scroll;
 }
 
-
-.home-screen-scores {
+.home-screen-welcome {
     text-align: center;
     margin-top: 2rem;
     
 }
 
 .home-screen-text-wrapper {
-    margin-left: auto;
-    margin-right: auto;
-    height: 4rem;
-    max-width: 40%;
-    padding-top: 1.5rem;
-    //background-color:seagreen;
+    text-align: center;
     color: seashell;
-    margin-bottom: 42px;
-    border-radius: 12px;
-
+    h1{
+        font-size: 44px;
+    }
 }
 
+// Spinner scss
 .home-screen-spinners {
-    width: 100%;
-    height: 100%;
+    position: relative;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 42px;
 
     .spinner-wrapper {
         position:relative; 
-        width:100%; 
-        height:220px;
+        margin-bottom: 7px;
         margin-right: auto;
         margin-left: auto;
         display: flex;
-        justify-content: center;
+        width: 250px;
+        height: 250px;
+        padding: 1em;
        
     }
-}
-/*
-mat-progress-spinner {
-    
-    ::ng-deep circle {
-        stroke: #33dd82;
-    }
-}
-*/
-
-// Spinner colors - a better way?
-:host ::ng-deep #spinneri3 circle{   
-    stroke: #4ee04e;
-}
-
-:host ::ng-deep #spinneri2 circle{   
-    stroke: #e0de49;
-}
-
-:host ::ng-deep #spinneri1 circle{   
-    stroke: #4768d4;
-}
-
-.spinner-scores-wrapper{
-    color: seashell;
-    text-align: center;
-    max-width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.spinner-wrapper{
-    position: absolute;
-    width: 250px;
-    height: 250px;
-    padding: 1em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
 }
 
 .spinner-container{
@@ -173,47 +90,159 @@ svg{
         }
 
         &#radial-progress-3 circle{
-            stroke-dashoffset: 314.159265359;
+            stroke-dashoffset: 326.725635973;
             stroke-width: 13;
             stroke: rgb(93, 211, 158);
 
             &.circle-complete {
-                stroke-dasharray: 314.159265359;
+                stroke-dasharray: 326.725635973;
             }
         }
     }
 }
 
-// Scores colors
+
+// Scores scss
+.spinner-scores-wrapper{
+    text-align: center;
+    max-width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 4rem;
+
+    .liikunta-scores{
+        font-size: 13px;
+    }
+    #liikuntaScoresID {
+        .mat-expansion-panel{
+            background-color: rgb(93, 211, 158);
+        }
+        #mat-expansion-panel-header-0{
+            background-color: rgb(93, 211, 158);
+        }
+    }
+    #ruokailuScoresID {
+        .mat-expansion-panel{
+            background-color: rgb(247, 221, 114);
+        }
+        #mat-expansion-panel-header-1{
+            background-color: rgb(247, 221, 114);
+        }
+    }
+    #nukkuminenScoresID {
+        &.nukkuminen-scores {
+            margin-bottom: 2rem;
+        }
+        .mat-expansion-panel{
+            background-color: rgb(58, 174, 216);
+        }
+        #mat-expansion-panel-header-2{
+            background-color: rgb(58, 174, 216);
+        }
+    }
+}
+/*
 :host #liikuntaScoresID {
     .mat-expansion-panel{
-        background-color: #4ee04e;
+        background-color: rgb(93, 211, 158);
     }
     #mat-expansion-panel-header-0{
-        background-color: #4ee04e;
+        background-color: rgb(93, 211, 158);
     }
 }
 
 :host #ruokailuScoresID {
     .mat-expansion-panel{
-        background-color: #e0de49;
+        background-color: rgb(247, 221, 114);
     }
     #mat-expansion-panel-header-1{
-        background-color: #e0de49;
+        background-color: rgb(247, 221, 114);
     }
 }
 
 :host #nukkuminenScoresID {
     &.nukkuminen-scores {
-        margin-bottom: 67px;
+        margin-bottom: 2rem;
     }
     .mat-expansion-panel{
-        background-color: #4768d4;
+        background-color: rgb(58, 174, 216);
     }
     #mat-expansion-panel-header-2{
-        background-color: #4768d4;
+        background-color: rgb(58, 174, 216);
     }
 }
+
+
+.footer {
+    z-index: 0;
+    position: relative;
+    height: 10%;
+    width: 100%;
+}
+*/
+/*
+.home-screen {
+    //width: 100 %;
+    //margin-left: auto;
+    //margin-right: auto;
+    width: 100%;
+    position: fixed; 
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin: auto;
+    height: 87%;
+    overflow: scroll; overflow-x:hidden;
+    //justify-content: space-between;
+    background-color: rgb(31, 31, 31)
+    //border-radius: 12px;
+}
+
+
+.home-screen-welcome {
+    text-align: center;
+    margin-top: 2rem;
+    
+}
+
+.home-screen-text-wrapper {
+    margin-left: auto;
+    margin-right: auto;
+    height: 4rem;
+    max-width: 40%;
+    padding-top: 1.5rem;
+    //background-color:seagreen;
+    color: seashell;
+    margin-bottom: 42px;
+    border-radius: 12px;
+
+}
+*/
+
+
+/*
+mat-progress-spinner {
+    
+    ::ng-deep circle {
+        stroke: #33dd82;
+    }
+}
+*/
+
+/*
+.spinner-scores-wrapper{
+    color: seashell;
+    text-align: center;
+    max-width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+*/
+
+
+
+
 
 
 
