--- a/src/app/pages/hobbies/hobbies.component.scss
+++ b/src/app/pages/hobbies/hobbies.component.scss
@@ -5,6 +5,8 @@
     margin: auto;  
     overflow: scroll; overflow-x:hidden;
     background-color: rgb(31, 31, 31);
+    justify-content: center;
+    text-align: center;
 }
 .input{
     margin-top: 30px;
