--- a/src/app/pages/stats/stats.component.html
+++ b/src/app/pages/stats/stats.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-    <h1> Tämä on Stat Page</h1>
+    <h1 style="margin-top: 7rem; text-align: center;"> Tämä on Stat Page</h1>
 
     <div class="chart-wrapper">
         <h3>Kaikki data</h3>
