--- a/src/app/pages/tips/tips.component.html
+++ b/src/app/pages/tips/tips.component.html
@@ -1,3 +1,16 @@
 <div class="tips-screen">
-    <h1 class="text_header"> Tämä on Tips & Tricks Page</h1>
+    <div class="text-wrapper">
+        <h2 class="headers">NUORTEN UNI</h2>
+        <span class="span">Unen tarve on yksilöllistä. 14–17- vuotiaan nuoren unen tarve on 8–10 tuntia yössä.</span>
+        <h2 class="headers">NUORTEN LIIKUNTA</h2>
+        <span class="span">Nuorten tulisi harrastaa monipuolista liikuntaa vähintään 1-2 tuntia päivässä. 
+            Liikuntaan tulisi sisällyttää vähintään 10 minuuttia reipasta liikuntaa, jonka aikana sydämen syke ja hengitys 
+            kiihtyvät. Pitkiä aikoja paikallaan tulisi välttää ja ruutuaikaa vähentää kahteen tuntiin päivässä.</span>
+        <h2 class="headers">NUORTEN RUOKAILU</h2>
+        <span class="span">Riittävien ravintoaineiden saannin ja jaksamisen turvaksi säännöllinen ateriarytmi on erityisen 
+            tärkeää kouluikäisillä. Perinteisesti säännöllinen ateriarytmi koostuu aamiaisesta, lounaasta ja päivällisestä, 
+            tämän lisäksi olisi hyvä syödä päivän aikana muutamia terveellisiä välipaloja kuten hedelmiä, 
+            vihanneksia tai marjoja.</span>
+    </div>
+    
 </div>
