--- a/src/app/pages/hobbies/hobbies.component.scss
+++ b/src/app/pages/hobbies/hobbies.component.scss
@@ -8,15 +8,22 @@
     justify-content: center;
     text-align: center;
 }
+
 .input{
-    margin-top: 30px;
     position:relative;
+    background-color: white;
+    font-size: 16px;
+    text-align: center;
+    align-items: center;
 }
+
 .text {
     color: seashell;
+    text-align: center;
 }
 .text_header{
     color: seashell;
+    margin-top: 1em;
 }
 .text_choise{
     color: seashell;
